syntax = "proto3";


/** Cyph plans. */
enum CyphPlans {
	Free = 0;
	AnnualBusiness = 12;
	AnnualPlatinum = 8;
	AnnualPremium = 2;
	AnnualSupporter = 10;
	AnnualTelehealth = 5;
	FoundersAndFriends = 4;
	FoundersAndFriends_Telehealth = 13;
	LifetimePlatinum = 3;
	MonthlyBusiness = 11;
	MonthlyPlatinum = 7;
	MonthlyPremium = 1;
	MonthlySupporter = 9;
	MonthlyTelehealth = 6;
}
